fixed letter spacing

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ h1 {
     opacity: 0.9;
     text-align:center;
     text-transform:uppercase;
+    letter-spacing: -3px;
 }
 .container{
   width: 500px;
